--- a/.github/workflows/_linux-build.yml
+++ b/.github/workflows/_linux-build.yml
@@ -91,20 +91,20 @@ jobs:
         id: parse-ref
         run: .github/scripts/parse_ref.py
 
-      - name: Get workflow job id
-        id: get-job-id
-        uses: ./.github/actions/get-workflow-job-id
-        if: always()
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-
-      # Apply the filter logic to the build step too if the test-config label is already there
-      - name: Select all requested test configurations (if the test matrix is available)
-        id: filter
-        uses: ./.github/actions/filter-test-configs
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          test-matrix: ${{ inputs.test-matrix }}
+        #      - name: Get workflow job id
+        #        id: get-job-id
+        #        uses: ./.github/actions/get-workflow-job-id
+        #        if: always()
+        #        with:
+        #          github-token: ${{ secrets.GITHUB_TOKEN }}
+        #
+        #      # Apply the filter logic to the build step too if the test-config label is already there
+        #      - name: Select all requested test configurations (if the test matrix is available)
+        #        id: filter
+        #        uses: ./.github/actions/filter-test-configs
+        #        with:
+        #          github-token: ${{ secrets.GITHUB_TOKEN }}
+        #          test-matrix: ${{ inputs.test-matrix }}
 
       - name: Build
         if: steps.filter.outputs.is-test-matrix-empty == 'False' || inputs.test-matrix == ''
@@ -124,7 +124,7 @@ jobs:
           DOCKER_IMAGE: ${{ steps.calculate-docker-image.outputs.docker-image }}
           XLA_CUDA: ${{ contains(inputs.build-environment, 'xla') && '0' || '' }}
           DEBUG: ${{ inputs.build-with-debug && '1' || '0' }}
-          OUR_GITHUB_JOB_ID: ${{ steps.get-job-id.outputs.job-id }}
+          #OUR_GITHUB_JOB_ID: ${{ steps.get-job-id.outputs.job-id }}
         run: |
           # detached container should get cleaned up by teardown_ec2_linux
           container_name=$(docker run \
@@ -141,7 +141,7 @@ jobs:
             -e SKIP_SCCACHE_INITIALIZATION=1 \
             -e TORCH_CUDA_ARCH_LIST \
             -e PR_LABELS \
-            -e OUR_GITHUB_JOB_ID \
+            #            -e OUR_GITHUB_JOB_ID \
             --env-file="/tmp/github_env_${GITHUB_RUN_ID}" \
             --security-opt seccomp=unconfined \
             --cap-add=SYS_PTRACE \
