--- a/.github/workflows/inductor.yml
+++ b/.github/workflows/inductor.yml
@@ -20,17 +20,17 @@ jobs:
     with:
       build-environment: linux-bionic-cuda11.6-py3.10-gcc7-sm86
       docker-image-name: pytorch-linux-bionic-cuda11.6-cudnn8-py3-gcc7
-      cuda-arch-list: 8.6
+      cuda-arch-list: 8.0
       test-matrix: |
         { include: [
-          { config: "inductor", shard: 1, num_shards: 7, runner: "linux.g5.4xlarge.nvidia.gpu" },
-          { config: "inductor", shard: 2, num_shards: 7, runner: "linux.g5.4xlarge.nvidia.gpu" },
-          { config: "inductor", shard: 3, num_shards: 7, runner: "linux.g5.4xlarge.nvidia.gpu" },
-          { config: "inductor", shard: 4, num_shards: 7, runner: "linux.g5.4xlarge.nvidia.gpu" },
-          { config: "inductor", shard: 5, num_shards: 7, runner: "linux.g5.4xlarge.nvidia.gpu" },
-          { config: "inductor", shard: 6, num_shards: 7, runner: "linux.g5.4xlarge.nvidia.gpu" },
-          { config: "inductor", shard: 7, num_shards: 7, runner: "linux.g5.4xlarge.nvidia.gpu" },
-          { config: "inductor_distributed", shard: 1, num_shards: 1, runner: "linux.g5.12xlarge.nvidia.gpu" },
+          { config: "inductor", shard: 1, num_shards: 7, runner: "linux.gcp.a100" },
+          { config: "inductor", shard: 2, num_shards: 7, runner: "linux.gcp.a100" },
+          { config: "inductor", shard: 3, num_shards: 7, runner: "linux.gcp.a100" },
+          { config: "inductor", shard: 4, num_shards: 7, runner: "linux.gcp.a100" },
+          { config: "inductor", shard: 5, num_shards: 7, runner: "linux.gcp.a100" },
+          { config: "inductor", shard: 6, num_shards: 7, runner: "linux.gcp.a100" },
+          { config: "inductor", shard: 7, num_shards: 7, runner: "linux.gcp.a100" },
+          { config: "inductor_distributed", shard: 1, num_shards: 1, runner: "linux.gcp.a100" },
         ]}
 
   linux-bionic-cuda11_6-py3_10-gcc7-inductor-test:
