--- a/.github/workflows/_linux-build.yml
+++ b/.github/workflows/_linux-build.yml
@@ -64,8 +64,8 @@ jobs:
       # Use a pytorch/pytorch reference instead of a reference to the local
       # checkout because when we run this action we don't *have* a local
       # checkout. In other cases you should prefer a local checkout.
-      - name: Checkout PyTorch
-        uses: pytorch/pytorch/.github/actions/checkout-pytorch@master
+      #      - name: Checkout PyTorch
+      #        uses: pytorch/pytorch/.github/actions/checkout-pytorch@master
 
       - name: Setup Linux GCP A100
         uses: ./.github/actions/setup-linux-gcp-a100
