--- a/.github/workflows/_linux-test.yml
+++ b/.github/workflows/_linux-test.yml
@@ -30,7 +30,7 @@ jobs:
   # This needs to be run right before the test starts so that it can gather the
   # latest labels from the PR
   filter:
-    runs-on: [self-hosted, linux.large]
+    runs-on: [self-hosted, linux.gcp.a100]
     outputs:
       test-matrix: ${{ steps.filter.outputs.test-matrix }}
       is-test-matrix-empty: ${{ steps.filter.outputs.is-test-matrix-empty }}
@@ -51,7 +51,7 @@ jobs:
   test:
     needs: filter
     # Don't run on forked repos or empty test matrix
-    if: github.repository_owner == 'pytorch' && needs.filter.outputs.is-test-matrix-empty == 'False'
+    if: github.repository_owner == 'weiwangmeta' && needs.filter.outputs.is-test-matrix-empty == 'False'
     strategy:
       matrix: ${{ fromJSON(needs.filter.outputs.test-matrix) }}
       fail-fast: false
@@ -60,8 +60,8 @@ jobs:
       - name: Checkout PyTorch
         uses: pytorch/pytorch/.github/actions/checkout-pytorch@master
 
-      - name: Setup Linux
-        uses: ./.github/actions/setup-linux
+      - name: Setup Linux GCP A100
+        uses: ./.github/actions/setup-linux-gcp-a100
 
       - name: Setup SSH (Click me for login details)
         uses: pytorch/test-infra/.github/actions/setup-ssh@main
@@ -209,44 +209,44 @@ jobs:
         run: |
           kill "$MONITOR_SCRIPT_PID"
 
-      - name: Upload test artifacts
-        uses: ./.github/actions/upload-test-artifacts
-        if: always() && (steps.test.conclusion == 'success' || steps.test.conclusion == 'failure')
-        with:
-          file-suffix: ${{ github.job }}-${{ matrix.config }}-${{ matrix.shard }}-${{ matrix.num_shards }}-${{ matrix.runner }}_${{ steps.get-job-id.outputs.job-id }}
-
-      - name: Store Core dumps on S3
-        uses: seemethere/upload-artifact-s3@v5
-        if: failure()
-        with:
-          name: coredumps-${{ matrix.config }}-${{ matrix.shard }}-${{ matrix.num_shards }}-${{ matrix.runner }}
-          retention-days: 14
-          if-no-files-found: ignore
-          path: ./**/core.[1-9]*
-
-      - name: Upload test statistics
-        if: always()
-        env:
-          AWS_DEFAULT_REGION: us-east-1
-          GIT_DEFAULT_BRANCH: ${{ github.event.repository.default_branch }}
-          BRANCH: ${{ steps.parse-ref.outputs.branch }}
-          TEST_CONFIG: ${{ matrix.config }}
-          SHARD_NUMBER: ${{ matrix.shard }}
-          BUILD_ENVIRONMENT: ${{ inputs.build-environment }}
-          PR_NUMBER: ${{ github.event.pull_request.number }}
-          PYTORCH_RETRY_TEST_CASES: 1
-          PYTORCH_OVERRIDE_FLAKY_SIGNAL: 1
-          SHA1: ${{ github.event.pull_request.head.sha || github.sha }}
-          TAG: ${{ steps.parse-ref.outputs.tag }}
-          WORKFLOW_ID: ${{ github.run_id }}
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          GHA_WORKFLOW_JOB_ID: ${{ steps.get-job-id.outputs.job-id }}
-        shell: bash
-        run: |
-          set -x
-          python3 -m pip install -r requirements.txt
-          python3 -m pip install boto3==1.19.12
-          python3 -m tools.stats.print_test_stats --upload-to-s3 --compare-with-s3 test
+          #      - name: Upload test artifacts
+          #        uses: ./.github/actions/upload-test-artifacts
+          #        if: always() && (steps.test.conclusion == 'success' || steps.test.conclusion == 'failure')
+          #        with:
+          #          file-suffix: ${{ github.job }}-${{ matrix.config }}-${{ matrix.shard }}-${{ matrix.num_shards }}-${{ matrix.runner }}_${{ steps.get-job-id.outputs.job-id }}
+          #
+          #      - name: Store Core dumps on S3
+          #        uses: seemethere/upload-artifact-s3@v5
+          #        if: failure()
+          #        with:
+          #          name: coredumps-${{ matrix.config }}-${{ matrix.shard }}-${{ matrix.num_shards }}-${{ matrix.runner }}
+          #          retention-days: 14
+          #          if-no-files-found: ignore
+          #          path: ./**/core.[1-9]*
+          #
+          #      - name: Upload test statistics
+          #        if: always()
+          #        env:
+          #          AWS_DEFAULT_REGION: us-east-1
+          #          GIT_DEFAULT_BRANCH: ${{ github.event.repository.default_branch }}
+          #          BRANCH: ${{ steps.parse-ref.outputs.branch }}
+          #          TEST_CONFIG: ${{ matrix.config }}
+          #          SHARD_NUMBER: ${{ matrix.shard }}
+          #          BUILD_ENVIRONMENT: ${{ inputs.build-environment }}
+          #          PR_NUMBER: ${{ github.event.pull_request.number }}
+          #          PYTORCH_RETRY_TEST_CASES: 1
+          #          PYTORCH_OVERRIDE_FLAKY_SIGNAL: 1
+          #          SHA1: ${{ github.event.pull_request.head.sha || github.sha }}
+          #          TAG: ${{ steps.parse-ref.outputs.tag }}
+          #          WORKFLOW_ID: ${{ github.run_id }}
+          #          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          #          GHA_WORKFLOW_JOB_ID: ${{ steps.get-job-id.outputs.job-id }}
+          #        shell: bash
+          #        run: |
+          #          set -x
+          #          python3 -m pip install -r requirements.txt
+          #          python3 -m pip install boto3==1.19.12
+          #          python3 -m tools.stats.print_test_stats --upload-to-s3 --compare-with-s3 test
 
       - name: Teardown Linux
         uses: pytorch/test-infra/.github/actions/teardown-linux@main
