--- a/.github/workflows/_linux-test.yml
+++ b/.github/workflows/_linux-test.yml
@@ -80,9 +80,16 @@ jobs:
         with:
           docker-image: ${{ inputs.docker-image }}
 
-      - name: Install nvidia driver, nvidia-docker runtime, set GPU_FLAG
-        uses: pytorch/test-infra/.github/actions/setup-nvidia@main
-        if: contains(inputs.build-environment, 'cuda') && !contains(matrix.config, 'nogpu')
+          #      - name: Install nvidia driver, nvidia-docker runtime, set GPU_FLAG
+          #        uses: nick-fields/retry@3e91a01664abd3c5cd539100d10d33b9c5b68482
+          #        if: contains(inputs.build-environment, 'cuda') && !contains(matrix.config, 'nogpu')
+          #        with:
+          #          timeout_minutes: 10
+          #          max_attempts: 3
+          #          command: |
+          #            set -ex
+          #            bash .github/scripts/install_nvidia_utils_linux.sh
+          #            echo "GPU_FLAG=--gpus all" >> "${GITHUB_ENV}"
 
       - name: Start monitoring script
         id: monitor-script
