--- a/.github/actions/download-build-artifacts/action.yml
+++ b/.github/actions/download-build-artifacts/action.yml
@@ -15,7 +15,7 @@ runs:
   steps:
     - name: Download PyTorch Build Artifacts from S3
       if: ${{ !inputs.use-gha }}
-      uses: weiwangmeta/download-artifact-s3
+      uses: weiwangmeta/download-artifact-s3@main
       with:
         name: ${{ inputs.name }}
 
