--- a/.github/workflows/inductor.yml
+++ b/.github/workflows/inductor.yml
@@ -14,33 +14,13 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-        #  linux-bionic-cuda11_6-py3_10-gcc7-inductor-build:
-        #    name: cuda11.6-py3.10-gcc7-sm86
-        #    uses: ./.github/workflows/_linux-build.yml
-        #    with:
-        #      build-environment: linux-bionic-cuda11.6-py3.10-gcc7-sm86
-        #      docker-image-name: pytorch-linux-bionic-cuda11.6-cudnn8-py3-gcc7
-        #      cuda-arch-list: 8.6
-        #      test-matrix: |
-        #        { include: [
-        #          { config: "inductor", shard: 1, num_shards: 7, runner: "linux.gcp.a100" },
-        #          { config: "inductor", shard: 2, num_shards: 7, runner: "linux.gcp.a100" },
-        #          { config: "inductor", shard: 3, num_shards: 7, runner: "linux.gcp.a100" },
-        #          { config: "inductor", shard: 4, num_shards: 7, runner: "linux.gcp.a100" },
-        #          { config: "inductor", shard: 5, num_shards: 7, runner: "linux.gcp.a100" },
-        #          { config: "inductor", shard: 6, num_shards: 7, runner: "linux.gcp.a100" },
-        #          { config: "inductor", shard: 7, num_shards: 7, runner: "linux.gcp.a100" },
-        #          { config: "inductor_distributed", shard: 1, num_shards: 1, runner: "linux.gcp.a100" },
-        #        ]}
-
-  linux-bionic-cuda11_6-py3_10-gcc7-inductor-test:
+  linux-bionic-cuda11_6-py3_10-gcc7-inductor-build:
     name: cuda11.6-py3.10-gcc7-sm86
-    uses: ./.github/workflows/_linux-test.yml
-    #    needs: linux-bionic-cuda11_6-py3_10-gcc7-inductor-build
+    uses: ./.github/workflows/_linux-build.yml
     with:
       build-environment: linux-bionic-cuda11.6-py3.10-gcc7-sm86
-      docker-image: 308535385114.dkr.ecr.us-east-1.amazonaws.com/pytorch/pytorch-linux-bionic-cuda11.6-cudnn8-py3-gcc7:1401ccaeefe6e3354ad5dfae8aca135851e7408b
-      #      test-matrix: ${{ needs.linux-bionic-cuda11_6-py3_10-gcc7-inductor-build.outputs.test-matrix }}
+      docker-image-name: pytorch-linux-bionic-cuda11.6-cudnn8-py3-gcc7
+      cuda-arch-list: 8.0
       test-matrix: |
         { include: [
           { config: "inductor", shard: 1, num_shards: 7, runner: "linux.gcp.a100" },
@@ -52,3 +32,24 @@ jobs:
           { config: "inductor", shard: 7, num_shards: 7, runner: "linux.gcp.a100" },
           { config: "inductor_distributed", shard: 1, num_shards: 1, runner: "linux.gcp.a100" },
         ]}
+
+  linux-bionic-cuda11_6-py3_10-gcc7-inductor-test:
+    name: cuda11.6-py3.10-gcc7-sm86
+    uses: ./.github/workflows/_linux-test.yml
+    needs: linux-bionic-cuda11_6-py3_10-gcc7-inductor-build
+    with:
+      build-environment: linux-bionic-cuda11.6-py3.10-gcc7-sm86
+      docker-image: ${{ needs.linux-bionic-cuda11_6-py3_10-gcc7-inductor-build.outputs.docker-image }}
+      #      docker-image: 308535385114.dkr.ecr.us-east-1.amazonaws.com/pytorch/pytorch-linux-bionic-cuda11.6-cudnn8-py3-gcc7:1401ccaeefe6e3354ad5dfae8aca135851e7408b
+      test-matrix: ${{ needs.linux-bionic-cuda11_6-py3_10-gcc7-inductor-build.outputs.test-matrix }}
+      #      test-matrix: |
+      #        { include: [
+      #          { config: "inductor", shard: 1, num_shards: 7, runner: "linux.gcp.a100" },
+      #          { config: "inductor", shard: 2, num_shards: 7, runner: "linux.gcp.a100" },
+      #          { config: "inductor", shard: 3, num_shards: 7, runner: "linux.gcp.a100" },
+      #          { config: "inductor", shard: 4, num_shards: 7, runner: "linux.gcp.a100" },
+      #          { config: "inductor", shard: 5, num_shards: 7, runner: "linux.gcp.a100" },
+      #          { config: "inductor", shard: 6, num_shards: 7, runner: "linux.gcp.a100" },
+      #          { config: "inductor", shard: 7, num_shards: 7, runner: "linux.gcp.a100" },
+      #          { config: "inductor_distributed", shard: 1, num_shards: 1, runner: "linux.gcp.a100" },
+      #        ]}
