--- a/.github/workflows/_linux-build.yml
+++ b/.github/workflows/_linux-build.yml
@@ -164,12 +164,15 @@ jobs:
         run: |
           zip -1 -r artifacts.zip dist/ build/custom_test_artifacts build/lib build/bin .pytorch-test-times.json
 
-      - name: Upload test artifacts
-        uses: ./.github/actions/upload-test-artifacts
+      - name: Upload build artifacts
+        uses: actions/upload-artifact@v3
         if: always() && (steps.build.conclusion == 'success')
         with:
-          use-gha: true
-          file-suffix: ${{ github.job }}-${{ matrix.config }}-${{ matrix.shard }}-${{ matrix.num_shards }}-${{ matrix.runner }}_${{ steps.get-job-id.outputs.job-id }}
+          # Add the run attempt, see [Artifact run attempt]
+          name: build-${{ github.run_id}}-${{ github.run_attempt }}.zip
+          retention-days: 14
+          if-no-files-found: warn
+          path: artificats.zip
           #
           #      - name: Store PyTorch Build Artifacts on S3
           #        uses: seemethere/upload-artifact-s3@v5
