--- a/.github/workflows/_linux-build.yml
+++ b/.github/workflows/_linux-build.yml
@@ -112,52 +112,53 @@ jobs:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           test-matrix: ${{ inputs.test-matrix }}
 
-          #      - name: Build
-          #        if: steps.filter.outputs.is-test-matrix-empty == 'False' || inputs.test-matrix == ''
-          #        #        if: always()
-          #        id: build
-          #        env:
-          #          BUILD_ENVIRONMENT: ${{ inputs.build-environment }}
-          #          BRANCH: ${{ steps.parse-ref.outputs.branch }}
-          #          # TODO duplicated
-          #          AWS_DEFAULT_REGION: us-east-1
-          #          PR_NUMBER: ${{ github.event.pull_request.number }}
-          #          SHA1: ${{ github.event.pull_request.head.sha || github.sha }}
-          #          SCCACHE_BUCKET: ossci-compiler-cache-circleci-v2
-          #          SCCACHE_S3_KEY_PREFIX: ${{ github.workflow }}
-          #          XLA_CLANG_CACHE_S3_BUCKET_NAME: ossci-compiler-clang-cache-circleci-xla
-          #          PR_LABELS: ${{ toJson(github.event.pull_request.labels.*.name) }}
-          #          TORCH_CUDA_ARCH_LIST: ${{ inputs.cuda-arch-list }}
-          #          DOCKER_IMAGE: ${{ steps.calculate-docker-image.outputs.docker-image }}
-          #          XLA_CUDA: ${{ contains(inputs.build-environment, 'xla') && '0' || '' }}
-          #          DEBUG: ${{ inputs.build-with-debug && '1' || '0' }}
-          #          #OUR_GITHUB_JOB_ID: ${{ steps.get-job-id.outputs.job-id }}
-          #        run: |
-          #          # detached container should get cleaned up by teardown_ec2_linux
-          #          container_name=$(docker run \
-          #            -e BUILD_ENVIRONMENT \
-          #            -e MAX_JOBS="$(nproc --ignore=2)" \
-          #            -e AWS_DEFAULT_REGION \
-          #            -e PR_NUMBER \
-          #            -e SHA1 \
-          #            -e BRANCH \
-          #            -e SCCACHE_BUCKET \
-          #            -e SCCACHE_S3_KEY_PREFIX \
-          #            -e XLA_CUDA \
-          #            -e XLA_CLANG_CACHE_S3_BUCKET_NAME \
-          #            -e SKIP_SCCACHE_INITIALIZATION=1 \
-          #            -e TORCH_CUDA_ARCH_LIST \
-          #            -e PR_LABELS \
-          #            --security-opt seccomp=unconfined \
-          #            --cap-add=SYS_PTRACE \
-          #            --tty \
-          #            --detach \
-          #            --user jenkins \
-          #            -v "${GITHUB_WORKSPACE}:/var/lib/jenkins/workspace" \
-          #            -w /var/lib/jenkins/workspace \
-          #            "${DOCKER_IMAGE}"
-          #          )
-          #          docker exec -t "${container_name}" sh -c '.jenkins/pytorch/build.sh'
+      - name: Build
+        #        if: steps.filter.outputs.is-test-matrix-empty == 'False' || inputs.test-matrix == ''
+        #        if: always()
+        if: false 
+        id: build
+        env:
+          BUILD_ENVIRONMENT: ${{ inputs.build-environment }}
+          BRANCH: ${{ steps.parse-ref.outputs.branch }}
+          # TODO duplicated
+          AWS_DEFAULT_REGION: us-east-1
+          PR_NUMBER: ${{ github.event.pull_request.number }}
+          SHA1: ${{ github.event.pull_request.head.sha || github.sha }}
+          SCCACHE_BUCKET: ossci-compiler-cache-circleci-v2
+          SCCACHE_S3_KEY_PREFIX: ${{ github.workflow }}
+          XLA_CLANG_CACHE_S3_BUCKET_NAME: ossci-compiler-clang-cache-circleci-xla
+          PR_LABELS: ${{ toJson(github.event.pull_request.labels.*.name) }}
+          TORCH_CUDA_ARCH_LIST: ${{ inputs.cuda-arch-list }}
+          DOCKER_IMAGE: ${{ steps.calculate-docker-image.outputs.docker-image }}
+          XLA_CUDA: ${{ contains(inputs.build-environment, 'xla') && '0' || '' }}
+          DEBUG: ${{ inputs.build-with-debug && '1' || '0' }}
+          #OUR_GITHUB_JOB_ID: ${{ steps.get-job-id.outputs.job-id }}
+        run: |
+          # detached container should get cleaned up by teardown_ec2_linux
+          container_name=$(docker run \
+            -e BUILD_ENVIRONMENT \
+            -e MAX_JOBS="$(nproc --ignore=2)" \
+            -e AWS_DEFAULT_REGION \
+            -e PR_NUMBER \
+            -e SHA1 \
+            -e BRANCH \
+            -e SCCACHE_BUCKET \
+            -e SCCACHE_S3_KEY_PREFIX \
+            -e XLA_CUDA \
+            -e XLA_CLANG_CACHE_S3_BUCKET_NAME \
+            -e SKIP_SCCACHE_INITIALIZATION=1 \
+            -e TORCH_CUDA_ARCH_LIST \
+            -e PR_LABELS \
+            --security-opt seccomp=unconfined \
+            --cap-add=SYS_PTRACE \
+            --tty \
+            --detach \
+            --user jenkins \
+            -v "${GITHUB_WORKSPACE}:/var/lib/jenkins/workspace" \
+            -w /var/lib/jenkins/workspace \
+            "${DOCKER_IMAGE}"
+          )
+          docker exec -t "${container_name}" sh -c '.jenkins/pytorch/build.sh'
 
       - name: Archive artifacts into zip
         #        if: inputs.build-generates-artifacts && steps.build.outcome != 'skipped'
@@ -167,7 +168,7 @@ jobs:
 
       - name: Upload build artifacts
         uses: actions/upload-artifact@v3
-        if: always() && (steps.build.conclusion == 'success')
+        #        if: always() && (steps.build.conclusion == 'success')
         with:
           # Add the run attempt, see [Artifact run attempt]
           name: ${{ inputs.build-environment }}
