--- a/.github/workflows/inductor.yml
+++ b/.github/workflows/inductor.yml
@@ -23,12 +23,12 @@ jobs:
       cuda-arch-list: '8.0'
       test-matrix: |
         { include: [
-          { config: "inductor", shard: 1, num_shards: 1, runner: "linux.gcp.a100" },
-          { config: "inductor_huggingface", shard: 1, num_shards: 1, runner: "linux.gcp.a100" },
-          { config: "inductor_timm", shard: 1, num_shards: 2, runner: "linux.gcp.a100" },
-          { config: "inductor_timm", shard: 2, num_shards: 2, runner: "linux.gcp.a100" },
-          { config: "inductor_torchbench", shard: 1, num_shards: 1, runner: "linux.gcp.a100" },
-          { config: "inductor_distributed", shard: 1, num_shards: 1, runner: "linux.gcp.a100" },
+                #          { config: "inductor", shard: 1, num_shards: 1, runner: "linux.gcp.a100" },
+                #          { config: "inductor_huggingface", shard: 1, num_shards: 1, runner: "linux.gcp.a100" },
+                #          { config: "inductor_timm", shard: 1, num_shards: 2, runner: "linux.gcp.a100" },
+                #          { config: "inductor_timm", shard: 2, num_shards: 2, runner: "linux.gcp.a100" },
+                #          { config: "inductor_torchbench", shard: 1, num_shards: 1, runner: "linux.gcp.a100" },
+          { config: "inductor_distributed", shard: 1, num_shards: 1, runner: "linux.gcp.a100.4x" },
         ]}
 
   linux-bionic-cuda11_6-py3_10-gcc7-inductor-test:
