--- a/.github/workflows/_linux-build.yml
+++ b/.github/workflows/_linux-build.yml
@@ -78,8 +78,8 @@ jobs:
       - name: Checkout PyTorch
         uses: pytorch/pytorch/.github/actions/checkout-pytorch@master
 
-      - name: Setup Linux GCP A100
-        uses: ./.github/actions/setup-linux-gcp-a100
+      - name: Setup Linux GCP CPU
+        uses: ./.github/actions/setup-linux-gcp-cpu
 
       - name: Calculate docker image
         id: calculate-docker-image
