--- a/.github/workflows/_linux-test.yml
+++ b/.github/workflows/_linux-test.yml
@@ -36,7 +36,7 @@ jobs:
   # This needs to be run right before the test starts so that it can gather the
   # latest labels from the PR
   filter:
-    runs-on: [self-hosted, linux.large]
+    runs-on: [self-hosted, linux.gcp.a100]
     outputs:
       test-matrix: ${{ steps.filter.outputs.test-matrix }}
       is-test-matrix-empty: ${{ steps.filter.outputs.is-test-matrix-empty }}
@@ -57,7 +57,7 @@ jobs:
   test:
     needs: filter
     # Don't run on forked repos or empty test matrix
-    if: github.repository_owner == 'pytorch' && needs.filter.outputs.is-test-matrix-empty == 'False'
+    if: github.repository_owner == 'weiwangmeta' && needs.filter.outputs.is-test-matrix-empty == 'False'
     strategy:
       matrix: ${{ fromJSON(needs.filter.outputs.test-matrix) }}
       fail-fast: false
